# hal-midi

./: CMakeLists.txt  library.json
src/oc/hal/midi/: LibreMidiTransport.cpp  LibreMidiTransport.hpp
test/: test_LibreMidiTransport.cpp
